--- a/portfolio.css
+++ b/portfolio.css
@@ -6,6 +6,8 @@
 body{
     background-color: #f5d8dd;
     /* border: black 2px solid; */
+    margin-right: 0px;
+    overflow-x: hidden;
 }
   header{
     position: sticky;
@@ -242,20 +244,131 @@ margin-left: 10px;
 .main_division_images_skills{
     padding-left: 20px;
     padding-right: 20px; 
+    position: relative;
  }
+  .main_division_images_skills::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url(./blob-haikei.svg);
+    background-size: cover;
+    left: 0px;
+    top: 0px;
+ } 
 .division_image1{
-    margin-left: 10px;
+    margin-left: 60px;
     margin-right: 10px;
     border-radius: 30px;
 }
 .division_image2{
-    margin-left: 10px;
+    margin-left: 35px;
     margin-right: 10px;
     border-radius: 30px;
+    padding: 0px;
 }
 .division_image3{
-    margin-left: 10px;
+    margin-left: 130px;
     margin-right: 10px;
     border-radius: 30px;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.divofcontact{
+    margin-top: 40px;
+    /* border: black 2px solid; */
+}
+.uppertable_style{
+    position: relative;
+    /* border: 1px violet solid; */
+    
+    height: 100px;
+    width: 100%;
+    /* width: 100%;
+    height: 100%; */
 }
 
+.div_contact{
+    /* text-align: centre; */
+    margin-left: 140px;
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.div_contact_para{
+    margin-left: 8px;
+
+}
+.table_class{
+    border: purple 2px solid;
+    margin: 30px;
+    padding: 30px;
+    box-shadow: 1px 1px 2px purple;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border-radius: 5px;
+    /* margin-right: 20px; */
+
+}
+.table_class::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: url(./low-poly-grid-haikei.svg) ;
+  background-size: cover;
+  right: 0px;
+  left: 0px;
+  bottom: 5px;
+  top: 1px;
+  border-radius: 5px;
+}
+.button{
+    margin-left: 16vw;
+    margin-top: 20px;
+    padding: 10px;
+    width: 150px;
+    border-radius: 30px;
+    /* height: 20px; */
+    text-align: center;
+    /* padding-bottom: 60px; */
+    font-size: x-large;
+    color: black;
+    background-color: burlywood;
+    vertical-align: middle;
+
+}
+.layeredsteps{
+    width: 100%;
+    height: 200px;
+    position: relative;
+    /* border: purple 2px solid; */
+    
+}
+.layeredsteps::before{
+    content: "";
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    background: url(./layered-steps-haikei.svg);
+    background-size: contain;
+    z-index: -99;
+    width: 100%;
+    height: 100%;
+    bottom: 170px;
+    
+}
+
+.image_bottom{
+    margin-top: 30px;
+    position: relative;
+    top: 30px;
+    margin-left: 150px;
+    border-radius: 20px;
+    
+}
